--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <hr>
 
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Hobbies.html">My Hobbies</a>
   <a href="Contact.html">Contact Details</a>
 
 
